Cleanup layout and display on Android devices to reduce the header height and properly render profile pages and company images, also prevent and/or allow wrapping of sub-header text where appropriate

--- a/mobile/scss/base/variables.scss
+++ b/mobile/scss/base/variables.scss
@@ -801,4 +801,4 @@ $z-index-click-block:             99999 !default;
 // Platform
 // -------------------------------
 
-$ios-statusbar-height:           20px !default;
+$ios-statusbar-height:           20px;
