--- a/mobile/scss/modules/profile.scss
+++ b/mobile/scss/modules/profile.scss
@@ -8,12 +8,20 @@ $photo-dimension : $profile-subheader-height * 1.1;
 
 .profile-visual{
   position: absolute;
+  top: $bar-height; 
   left: 10px;
   right: 10px;
-  top: $bar-height + 20px; // adding ios statusbar height offset
   height: $profile-subheader-height;
   text-align: center;
   z-index: 2;
+  
+  .platform-android & {
+    top: $bar-height; 
+  }
+  
+  .platform-ios & {
+    top: $bar-height + $ios-statusbar-height !important;
+  }
 
   .photo{
     display: inline-block;
@@ -94,7 +102,14 @@ $photo-dimension : $profile-subheader-height * 1.1;
     bottom: auto;
     height: auto;
     overflow: hidden;
-    padding: 60px 13px 0;
+    padding-top: $bar-height;
+    padding-left: 13px;
+    padding-right: 13px;
+    padding-bottom: 0;
+  
+    .platform-ios & {
+        padding-top: $bar-height + $ios-statusbar-height !important;
+    }
 
     .photo{
       float: left;
